**  denotes quite substantial/important changes
*** denotes really big changes 

ISSUES:

* bam fails with single fixed sp and fREML.

1.7-19

* By default summary.gam and anova.gam no longer report p-values for "re" 
  terms, since these only work well in rather simple cases without random 
  effect nesting, and it seems better not to rely on users studying the 
  help files in detail for this. Can be turned back on with all.p=TRUE.  

1.7-18

* Embarrassingly, the adjusted r^2 computation in summary.gam was wrong
  for models with prior weights. Now fixed, thanks to Antony Unwin.

* bam(...,method="fREML") could give incorrect edfs for "re" terms as a 
  result of a matrix indexing error in Sl.initial.repara. Now fixed. 
  Thanks to Martijn Wieling for reporting this.

* summary.gam had freq=TRUE set as default in 1.7-17. This gave better 
  p-values for paraPen terms, but spoiled p-values for fixed effects in the
  presence of "re" terms (a rather more common setup). Default now reset to
  freq=FALSE.

* bam(...,method="fREML") made fully compatible with gam.vcomp.

* bam and negbin examples speeded up

* predict.gam could fail for models of the form y~1 when newdata are supplied.
  (Could make some model averaging methods fail). Fixed.

* plot.gam had an overzealous check for availibility of variance estimates,
  which could make rank deficient models fail to plot CIs. fixed.

1.7-17

** p-values for terms with no un-penalized components were poor. The theory on 
  which the p-value computation for other terms is based shows why this is, 
  and allows fixes to be made. These are now implemented.

* summary p value bug fix --- smooths with no null space had a bug in 
  lower tail of p-value computation, yielding far too low values. Fixed.

* bam now outputs frequentist cov matrix Ve and alternative effective degrees 
  of freedom edf1, in all cases.

* smoothCon now adjusts null.space.dim on constraint absorption.
